--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.4.5",
+    "email-validator": "^2.0.4",
     "nodemailer": "^6.9.15"
   }
 }
